--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30296,7 +30296,7 @@ section.u-palette-1-light-1:before,
 .u-container-layout.u-container-layout.u-palette-1-light-1:before,
 .u-table-alt-palette-1-light-1 tr:nth-child(even) {
   color: #ffffff;
-  background-color: #232b79;
+  background-color: #2D5A27;
 }
 
 .u-button-style.u-palette-1-light-1,
@@ -31416,14 +31416,14 @@ section.u-palette-3-base:before,
 .u-palette-3-base>.u-inner-container-layout:before,
 .u-container-layout.u-container-layout.u-palette-3-base:before,
 .u-table-alt-palette-3-base tr:nth-child(even) {
-  color: #111111;
-  background-color: #f1c50e;
+  color: white;
+  background-color: #192440;
 }
 
 .u-button-style.u-palette-3-base,
 .u-button-style.u-palette-3-base[class*="u-border-"] {
-  color: #111111 !important;
-  background-color: #f1c50e !important;
+  color: white !important;
+  background-color: #192440 !important;
 }
 
 .u-button-style.u-palette-3-base:hover,
